Expose server version (#566)
* Expose API version

* updates

* update

* update

* updates

* update

* spotless

* update